Adding the new Customer view with functionality to add to the Customers list

--- a/Src/CustomerManagement/View/CustomerDetailsView.xaml
+++ b/Src/CustomerManagement/View/CustomerDetailsView.xaml
@@ -10,10 +10,10 @@
         <Grid.RowDefinitions>
             <!-- Title -->
             <RowDefinition Height="50" />
-                
+
             <!-- Tabs -->
             <RowDefinition />
-                
+
             <!-- Buttons along the botton -->
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
@@ -50,19 +50,19 @@
                     <Label Grid.Row="6" Grid.Column="0">Last Update</Label>
 
                     <TextBlock Grid.Row="0" Grid.Column="1" Style="{StaticResource TabTextBlock}" Text="{Binding Id}" />
-                    <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource TabTextBox}" Text="{Binding CompanyName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                    <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource TabTextBox}" Text="{Binding BusinessContact,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                    <TextBox Grid.Row="3" Grid.Column="1" Style="{StaticResource TabTextBox}" Text="{Binding EmailAddress, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                    <TextBox Grid.Row="4" Grid.Column="1" Style="{StaticResource TabTextBox}" Text="{Binding ContactNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource FormTextBox}" Text="{Binding CompanyName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource FormTextBox}" Text="{Binding BusinessContact,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBox Grid.Row="3" Grid.Column="1" Style="{StaticResource FormTextBox}" Text="{Binding EmailAddress, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBox Grid.Row="4" Grid.Column="1" Style="{StaticResource FormTextBox}" Text="{Binding ContactNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <TextBlock Grid.Row="5" Grid.Column="1" Style="{StaticResource TabTextBlock}" Text="{Binding CreatedDateTime}" />
                     <TextBlock Grid.Row="6" Grid.Column="1" Style="{StaticResource TabTextBlock}" Text="{Binding LastUpdateDateTime}" />
                 </Grid>
             </TabItem>
             <TabItem Header="Recurring Services">
-                
+
             </TabItem>
             <TabItem Header="Non-Recurring Services">
-                
+
             </TabItem>
         </TabControl>
 
@@ -72,12 +72,12 @@
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            
+
             <!-- Cancel button -->
             <Button Grid.Row="0" Grid.Column="0" Command="{Binding CancelCommand}">
                 <Image Source="/Images/BackArrow.png" />
             </Button>
-            
+
             <!-- Save button -->
             <Button Grid.Row="0" Grid.Column="1" Content="Save" Command="{Binding SaveCommand}" />
         </Grid>
