--- a/Src/CustomerManagement/MainWindow.xaml
+++ b/Src/CustomerManagement/MainWindow.xaml
@@ -22,6 +22,9 @@
         <DataTemplate DataType="{x:Type viewModel:ServiceDetailsViewModel}">
             <view:ServiceDetailsView />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:NewCustomerViewModel}">
+            <view:NewCustomerView />
+        </DataTemplate>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
