--- a/Src/CustomerManagement/Styles/TextBoxStyles.xaml
+++ b/Src/CustomerManagement/Styles/TextBoxStyles.xaml
@@ -1,5 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="TextBox" x:Key="TabTextBox">
+    <Style TargetType="TextBox" x:Key="FormTextBox">
         <Setter Property="Height" Value="20" />
         <Setter Property="FontSize" Value="12" />
         <Setter Property="Margin" Value="5" />
