New Serice view for adding new a new service

--- a/Src/CustomerManagement/MainWindow.xaml
+++ b/Src/CustomerManagement/MainWindow.xaml
@@ -25,7 +25,11 @@
         <DataTemplate DataType="{x:Type viewModel:NewCustomerViewModel}">
             <view:NewCustomerView />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:NewServiceViewModel}">
+            <view:NewServiceView />
+        </DataTemplate>
     </Window.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
