Database operations for Services and an IsRecurring flag

--- a/Src/CustomerManagement/App.xaml
+++ b/Src/CustomerManagement/App.xaml
@@ -11,6 +11,8 @@
                 <ResourceDictionary Source="Styles\TabItem.xaml" />
                 <ResourceDictionary Source="Styles\TabControl.xaml" />
                 <ResourceDictionary Source="Styles\Label.xaml" />
+                <ResourceDictionary Source="Styles\Checkbox.xaml" />
+                <ResourceDictionary Source="Styles\Viewbox.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
