--- a/Src/CustomerManagement/View/ServiceDetailsView.xaml
+++ b/Src/CustomerManagement/View/ServiceDetailsView.xaml
@@ -34,6 +34,7 @@
                 <RowDefinition Height="50" />
                 <RowDefinition Height="50" />
                 <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
                 <RowDefinition />
             </Grid.RowDefinitions>
 
@@ -41,15 +42,19 @@
             <Label Grid.Row="1" Grid.Column="0">Name</Label>
             <Label Grid.Row="2" Grid.Column="0">Price</Label>
             <Label Grid.Row="3" Grid.Column="0">Price Formatted</Label>
-            <Label Grid.Row="4" Grid.Column="0">Created</Label>
-            <Label Grid.Row="5" Grid.Column="0">Last Update</Label>
+            <Label Grid.Row="4" Grid.Column="0">Recurring</Label>
+            <Label Grid.Row="5" Grid.Column="0">Created</Label>
+            <Label Grid.Row="6" Grid.Column="0">Last Update</Label>
 
             <TextBlock Grid.Row="0" Grid.Column="1" Style="{StaticResource TabTextBlock}" Text="{Binding Id}" />
             <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource FormTextBox}" Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource FormTextBox}" Text="{Binding PriceString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <TextBlock Grid.Row="3" Grid.Column="1" Style="{StaticResource TabTextBlock}" Text="{Binding PriceFormatted, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Grid.Row="4" Grid.Column="1" Style="{StaticResource TabTextBlock}" Text="{Binding CreatedDateTime, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Grid.Row="5" Grid.Column="1" Style="{StaticResource TabTextBlock}" Text="{Binding LastUpdateDateTime, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Viewbox Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left">
+                <CheckBox IsChecked="{Binding IsRecurring, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            </Viewbox>
+            <TextBlock Grid.Row="5" Grid.Column="1" Style="{StaticResource TabTextBlock}" Text="{Binding CreatedDateTime, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBlock Grid.Row="6" Grid.Column="1" Style="{StaticResource TabTextBlock}" Text="{Binding LastUpdateDateTime, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
         </Grid>
         
         <!-- Buttons -->
