--- a/Src/CustomerManagement/View/CustomersView.xaml
+++ b/Src/CustomerManagement/View/CustomersView.xaml
@@ -17,12 +17,14 @@
                 <ColumnDefinition Width="120" />
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="120"/>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Column="0" Style="{StaticResource HeaderTextBlock}" Text="Customer View"  />
             <Button Grid.Column="1" Content="Customer Details" Command="{Binding NavigateDetailsCommand}" />
             <Button Grid.Column="2" Content="New Customer" Command="{Binding NavigateNewCustomerCommand}" />
+            <Button Grid.Column="3" Content="Load Data" />
         </Grid>
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding Customers}" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" SelectedItem="{Binding SelectedCustomer}">
